# src/controllers/admin/user.controller.ts
@@ -372,7 +372,223 @@ const UserController = {
       });
     }
   },
+  getPermissions: async (req: Request, res: Response ): Promise<any> =>{
+    try{
+      /*
+        #swagger.tags= ['Admin']
+        #swagger.description = Get all roles
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/loginSchema"
+              },
+              example: {
+                email: 'johndoe@sample.com',
+                password: "password"
+              }
+            }
+          }
+        } 
+      */
+      const response = await AdminService.getPermissions(req);
 
+    /* #swagger.responses[200] = {
+      description: "Login response",
+        content: {
+          "application/json": {
+            schema:{
+              $ref: "#/components/schemas/loginSchema"
+            },
+            example: {
+              status: true,
+              data: {
+                email: 'johndoe@sample.com',
+                fullname: 'John Doe',
+                phone: '08012345678'
+              },
+              message: "Successful message"
+            }
+          }           
+        }
+      }
+    */
+      if(!response.status){
+        return res.status(400).json(response);
+      }
+      res.json(response)
+    }catch(err){
+      console.log(err);
+      res.status(500).json({
+        message: `Internal Server Error`,
+        status: false,
+      });
+    }
+  },
+  getOnePermission: async (req: Request, res: Response ): Promise<any> =>{
+    try{
+      /*
+        #swagger.tags= ['Admin']
+        #swagger.description = 'get single role by id.
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/loginSchema"
+              },
+              example: {
+                email: 'johndoe@sample.com',
+                password: "password"
+              }
+            }
+          }
+        } 
+      */
+      const response = await AdminService.getOnePermission(req);
+
+    /* #swagger.responses[200] = {
+      description: "Login response",
+        content: {
+          "application/json": {
+            schema:{
+              $ref: "#/components/schemas/loginSchema"
+            },
+            example: {
+              status: true,
+              data: {
+                email: 'johndoe@sample.com',
+                fullname: 'John Doe',
+                phone: '08012345678'
+              },
+              message: "Successful message"
+            }
+          }           
+        }
+      }
+    */
+      if(!response.status){
+        return res.status(400).json(response);
+      }
+      res.json(response)
+    }catch(err){
+      console.log(err);
+      res.status(500).json({
+        message: `Internal Server Error`,
+        status: false,
+      });
+    }
+  },
+
+  addRoleToPermissions: async (req: Request, res: Response ): Promise<any> =>{
+    try{
+      /*
+        #swagger.tags= ['Admin']
+        #swagger.description = 'Create new role.
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/loginSchema"
+              },
+              example: {
+                email: 'johndoe@sample.com',
+                password: "password"
+              }
+            }
+          }
+        } 
+      */
+      const response = await AdminService.addRoleToPermissions(req);
+
+    /* #swagger.responses[200] = {
+      description: "Login response",
+        content: {
+          "application/json": {
+            schema:{
+              $ref: "#/components/schemas/loginSchema"
+            },
+            example: {
+              status: true,
+              data: {
+                email: 'johndoe@sample.com',
+                fullname: 'John Doe',
+                phone: '08012345678'
+              },
+              message: "Successful message"
+            }
+          }           
+        }
+      }
+    */
+      if(!response.status){
+        return res.status(400).json(response);
+      }
+      res.json(response)
+    }catch(err){
+      console.log(err);
+      res.status(500).json({
+        message: `Internal Server Error`,
+        status: false,
+      });
+    }
+  },
+  assignRoleToUser: async (req: Request, res: Response ): Promise<any> =>{
+    try{
+      /*
+        #swagger.tags= ['Admin']
+        #swagger.description = 'Create new role.
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/loginSchema"
+              },
+              example: {
+                email: 'johndoe@sample.com',
+                password: "password"
+              }
+            }
+          }
+        } 
+      */
+      const response = await AdminService.assignRoleToUser(req);
+
+    /* #swagger.responses[200] = {
+      description: "Login response",
+        content: {
+          "application/json": {
+            schema:{
+              $ref: "#/components/schemas/loginSchema"
+            },
+            example: {
+              status: true,
+              data: {
+                email: 'johndoe@sample.com',
+                fullname: 'John Doe',
+                phone: '08012345678'
+              },
+              message: "Successful message"
+            }
+          }           
+        }
+      }
+    */
+      if(!response.status){
+        return res.status(400).json(response);
+      }
+      res.json(response)
+    }catch(err){
+      console.log(err);
+      res.status(500).json({
+        message: `Internal Server Error`,
+        status: false,
+      });
+    }
+  },
   createUser: async (req: Request, res: Response ): Promise<any> =>{
     try{
       /*
