# src/routes/index.ts
@@ -5,6 +5,8 @@ import authRoute from "./auth.route";
 import userRoute from "./user";
 import adminRoute from "./admin";
 import orderRouter from "./order/order.route";
+import { authenticateUser } from "../middleware/auth";
+import { authorization } from "../middleware/authorization";
 
 const appRoute: Router = express.Router();
 
@@ -14,7 +16,7 @@ appRoute.get("/", (req, res) => {
 
 appRoute.use("/auth", authRoute)
 appRoute.use("/user", userRoute)
-appRoute.use("/admin", adminRoute)
+appRoute.use("/admin", authenticateUser, authorization, adminRoute)
 appRoute.use("/order", orderRouter)
 
 export default appRoute;
